[gd_scene load_steps=15 format=2]

[ext_resource path="res://DraggableWindow.gd" type="Script" id=1]
[ext_resource path="res://FrameInfoLabel.gd" type="Script" id=3]
[ext_resource path="res://FramePanel.gd" type="Script" id=4]
[ext_resource path="res://Assets/icon_close.png" type="Texture" id=12]
[ext_resource path="res://Assets/icon_drag.png" type="Texture" id=13]
[ext_resource path="res://PrevButton.tscn" type="PackedScene" id=14]
[ext_resource path="res://DelayLineEdit.tscn" type="PackedScene" id=15]
[ext_resource path="res://PlayButton.tscn" type="PackedScene" id=16]
[ext_resource path="res://NextButton.tscn" type="PackedScene" id=17]
[ext_resource path="res://StartButton.tscn" type="PackedScene" id=18]
[ext_resource path="res://EndButton.tscn" type="PackedScene" id=19]
[ext_resource path="res://white_rect_1x1.png" type="Texture" id=21]
[ext_resource path="res://Canvas/FrameButton.tscn" type="PackedScene" id=22]
[ext_resource path="res://ToolButtons/AddFrameButtonOnFramePanel.tscn" type="PackedScene" id=23]

[node name="AnimationPopup" type="TextureRect"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 64.0
margin_top = 26.0
margin_right = 619.0
margin_bottom = 106.0
texture = ExtResource( 21 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
hide_close_button = true

[node name="CloseButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -37.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 37.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_right = 5.0
rect_min_size = Vector2( 100, 50 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="FramePanel" type="Panel" parent="HBoxContainer"]
margin_right = 530.0
margin_bottom = 80.0
rect_min_size = Vector2( 530, 70 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/FramePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -12.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/FramePanel/VBoxContainer"]
margin_right = 518.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" parent="HBoxContainer/FramePanel/VBoxContainer/HBoxContainer" instance=ExtResource( 18 )]
margin_bottom = 26.0

[node name="PrevButton" parent="HBoxContainer/FramePanel/VBoxContainer/HBoxContainer" instance=ExtResource( 14 )]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 26.0

[node name="PlayButton" parent="HBoxContainer/FramePanel/VBoxContainer/HBoxContainer" instance=ExtResource( 16 )]
margin_left = 88.0
margin_right = 128.0
margin_bottom = 26.0

[node name="NextButton" parent="HBoxContainer/FramePanel/VBoxContainer/HBoxContainer" instance=ExtResource( 17 )]
margin_left = 132.0
margin_right = 172.0
margin_bottom = 26.0

[node name="EndButton" parent="HBoxContainer/FramePanel/VBoxContainer/HBoxContainer" instance=ExtResource( 19 )]
margin_bottom = 26.0

[node name="DummyLabel2" type="Label" parent="HBoxContainer/FramePanel/VBoxContainer/HBoxContainer"]
margin_left = 220.0
margin_top = 5.0
margin_right = 235.0
margin_bottom = 21.0
text = "   "

[node name="DelayLabel" type="Label" parent="HBoxContainer/FramePanel/VBoxContainer/HBoxContainer"]
margin_left = 239.0
margin_top = 5.0
margin_right = 351.0
margin_bottom = 21.0
text = "Delay Per Frame"

[node name="DelayLineEdit" parent="HBoxContainer/FramePanel/VBoxContainer/HBoxContainer" instance=ExtResource( 15 )]
margin_left = 355.0
margin_right = 425.0
margin_bottom = 26.0

[node name="DummyLabel" type="Label" parent="HBoxContainer/FramePanel/VBoxContainer/HBoxContainer"]
margin_left = 429.0
margin_top = 5.0
margin_right = 444.0
margin_bottom = 21.0
text = "   "

[node name="FrameInfoLabel" type="Label" parent="HBoxContainer/FramePanel/VBoxContainer/HBoxContainer"]
margin_left = 448.0
margin_top = 5.0
margin_right = 496.0
margin_bottom = 21.0
text = "1 of 30"
script = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/FramePanel/VBoxContainer"]
margin_top = 30.0
margin_right = 518.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/FramePanel/VBoxContainer/ScrollContainer"]
margin_right = 84.0
margin_bottom = 40.0

[node name="FrameButton" parent="HBoxContainer/FramePanel/VBoxContainer/ScrollContainer/HBoxContainer" instance=ExtResource( 22 )]
margin_right = 40.0
margin_bottom = 40.0

[node name="AddFrameButtonOnFramePanel" parent="HBoxContainer/FramePanel/VBoxContainer/ScrollContainer/HBoxContainer" instance=ExtResource( 23 )]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_bottom = 1.0
margin_left = -6.0
margin_top = 5.0
margin_right = 21.0
margin_bottom = -5.00001
texture = ExtResource( 13 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_DraggableWindow_gui_input"]
[connection signal="pressed" from="CloseButton" to="." method="_on_TextureButton_pressed"]
